episodes/ecs-v4/demo1/widgetario/products-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api
spec:
  ports:
    - port: 80
      targetPort: api
  selector:
    app: products-api
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-api
  template:
    metadata:
      labels:
        app: products-api
    spec:
      containers:
        - name: api
          image: widgetario/products-api:dotnet
          ports:
            - containerPort: 80
              name: api
