episodes/ecs-v4/demo1/widgetario/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: widgetario-web
spec:
  ports:
    - port: 80
      targetPort: web
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: widgetario/web:dotnet-serilog
          ports:
            - containerPort: 80
              name: web
