episodes/ecs-v4/demo1/widgetario/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: widgetario
spec:
  rules:
  - host: widgetario.local
    http:
      paths:
      - path: /
        backend:
          serviceName: widgetario-web
          servicePort: 80
